test/parallel/forall/task-private/error-2-use-before-def.good
error-2-use-before-def.chpl:3: error: 'yyyy' used before defined (first used here)
