test/parallel/forall/task-private/error-2-use-before-def.chpl

forall lol in Locales with (
    var xxx = yyyy + 1,
    var yyyy = 5)
do
  writeln(xxx,yyyy);
